# Nimbus-Focus-App

./: .gitignore  README.md  package.json  svelte.config.js  vite.config.ts
.github/workflows/: release.yml
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/lib/stores/: timer.svelte.ts
src/routes/: +page.svelte  layout.css
