[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-notification = "2"
tauri-plugin-store = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"

[profile.release]
opt-level = "z"        # Optimize aggressively for binary size
lto = true             # Enable link-time optimization (cross-crate optimizations)
codegen-units = 1      # Compile all crates as a single unit to maximize LTO optimizations
panic = "abort"        # Disable unwinding on panic, removing substantial exception-handling code
strip = true           # Automatically strip symbols and debug info from the final binary

